syntax = "proto3";

option java_multiple_files = true;
package com.archforce.ath.rds.grpc.proto;

message ClientInfo {
  string clientId = 1;
  string username = 2;
  string password = 3;
}

message Message {
    int64 msgId = 1;
    string message = 2;
}

service ClientManage {
  rpc loginToServer (ClientInfo) returns (Message);
  rpc logoutFromServer (ClientInfo) returns (Message);
  rpc sendMsg(ClientInfo) returns (stream Message);
}
